--- a/style.css
+++ b/style.css
@@ -458,14 +458,7 @@ section {
   color: var(--color-white);
 }
 
-.section-contact .phone {
-  font-size: 2.5rem;
-  font-weight: bold;
-  display: block;
-  margin: var(--spacing-lg) 0;
-  font-family: var(--font-sans);
-  color: var(--color-white);
-}
+
 
 .section-contact p {
   margin-bottom: var(--spacing-md);
@@ -515,6 +508,10 @@ section {
   text-align: center;
   padding: var(--spacing-lg) var(--spacing-md); /* Increased top/bottom padding */
   font-size: 0.9rem;
+}
+
+.form-placeholder {
+  margin-top:35px;
 }
 
 .social-links {
