--- a/style.css
+++ b/style.css
@@ -282,24 +282,30 @@ a:hover {
 
 /* Staggered Delays for Closing (Button to Top) */
 .main-nav ul li:nth-child(1) {
-  transition-delay: 0.35s;
+  transition-delay: 0.4s;
 }
 .main-nav ul li:nth-child(2) {
-  transition-delay: 0.3s;
+  transition-delay: 0.35s;
 }
 .main-nav ul li:nth-child(3) {
-  transition-delay: 0.25s;
+  transition-delay: 0.3s;
 }
 .main-nav ul li:nth-child(4) {
-  transition-delay: 0.2s;
+  transition-delay: 0.25s;
 }
 .main-nav ul li:nth-child(5) {
-  transition-delay: 0.15s;
+  transition-delay: 0.2s;
 }
 .main-nav ul li:nth-child(6) {
-  transition-delay: 0.1s;
+  transition-delay: 0.15s;
 }
 .main-nav ul li:nth-child(7) {
+  transition-delay: 0.1s;
+}
+.main-nav ul li:nth-child(8) {
+  transition-delay: 0.05s;
+}
+.main-nav ul li:nth-child(9) {
   transition-delay: 0s;
 }
 
@@ -329,6 +335,12 @@ a:hover {
 }
 .main-nav.open ul li:nth-child(7) {
   transition-delay: 0.4s;
+}
+.main-nav.open ul li:nth-child(8) {
+  transition-delay: 0.45s;
+}
+.main-nav.open ul li:nth-child(9) {
+  transition-delay: 0.5s;
 }
 
 @media (min-width: 768px) {
